--- a/static/index.html
+++ b/static/index.html
@@ -4,22 +4,32 @@
 <head>
 	<meta charset="utf-8">
 	<title>HCI Project Portfolio</title>
+
+
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <body>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+
+
+
 	<!-- this is a comment in HTML -->
-	<h1>Michael Bernstein</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
+	<h1>Nicholas Colias</h1> <!-- h1 through h5 are headers. The higher the number, the smaller the header -->
 	<h4>Project Portfolio</h4>
 
 	<!-- p means paragraph -->
-	<p>Michael Bernstein is an assistant professor of Computer Science at Stanford University and director of the human-computer interaction group. He combines computation with crowds, designing systems that enable people to connect and coordinate online.</p>
+	<p>Nicholas is the ResNet coordinator at UCSD as well as an undergraduate student majoring in computer science.</p>
 
 	<h4>Projects</h4>
 	<ol>
-		<li>Waiting in line</li>
-		<li>Needfinding</li>
-		<li>Prototyping</li>
-		<li>...</li>
+		<li>Integration of Impulse Point SafeConnect with UCSD Network</li>
+		<li>Client Counting scripts for Cisco hardware using multithreaded perl snmp</li>
+		<li>Self Remediation system for UCSD ResNet compromised devices</li>
+		<li>Statistics gathering tools for Impulse Point SafeConnect and BMC Footprints</li>
 	</ol>
 </body>
 </html>
